<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <include
        android:id="@+id/include4"
        layout="@layout/layout_header" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/language"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include4" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="@string/lbl_choose_pref_language"
        android:textAlignment="center"
        android:textColor="@color/darkblue"
        android:textSize="36sp"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        tools:layout_editor_absoluteX="32dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnglish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lang_eng"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBangladesh"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lang_bgd"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNepal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_lang_nepal"
            app:backgroundTint="@color/colorPrimaryDark"
            app:cornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>