<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/splash"
        android:padding="16dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            tools:layout_editor_absoluteX="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLogin"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_box_blue"
                    android:drawableStart="@drawable/ic_person"
                    android:hint="@string/lbl_phone_passport"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/colorPrimaryDark" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/action_login"
                app:backgroundTint="@color/colorPrimaryDark"
                app:cornerRadius="10dp" />

            <TextView
                android:id="@+id/txtSignUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lbl_signup"
                android:textAlignment="viewEnd" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
