<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <include
        android:id="@+id/include2"
        layout="@layout/layout_header" />

    <include
        android:id="@+id/include3"
        layout="@layout/layout_maps"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintTop_toBottomOf="@+id/include2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/include3">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilCompName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCompName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_compname"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStreet1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStreet1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_street1"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStreet2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStreet2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_street2"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilStreet3"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etStreet3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_street3"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPostcode"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/lineColor"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPostcode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_box_blue"
                    android:hint="@string/lbl_postcode"
                    android:inputType="number"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilTown"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="10dp"
                app:boxCornerRadiusBottomStart="10dp"
                app:boxCornerRadiusTopEnd="10dp"
                app:boxCornerRadiusTopStart="10dp"
                app:boxStrokeColor="@color/lineColor"
                app:boxStrokeWidth="1dp"
                app:endIconMode="clear_text"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etTown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_box_blue"
                    android:hint="@string/lbl_town"
                    android:inputType="text"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColorHint="@color/colorPrimaryDark" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDistrict"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDistrict"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_district"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilState"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_state"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/action_next"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>