<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash">

    <include
        android:id="@+id/include"
        layout="@layout/layout_header" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgProfile"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_margin="16dp"
        android:background="@drawable/ic_camera"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:civ_circle_background_color="@color/lineColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="223dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilFullName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_fullname"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassport"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_passportno"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMobile"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:hint="@string/lbl_mobileno"
                android:inputType="phone"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilGender"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/colorPrimaryDark"
            app:hintEnabled="false">

            <com.google.android.material.textview.MaterialAutoCompleteTextView
                android:id="@+id/autoGender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:focusable="false"
                android:hint="@string/lbl_gender"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilDob"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="clear_text"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etDob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:drawableStart="@drawable/ic_event"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_dob"
                android:inputType="text"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilMealType"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="10dp"
            app:boxCornerRadiusBottomStart="10dp"
            app:boxCornerRadiusTopEnd="10dp"
            app:boxCornerRadiusTopStart="10dp"
            app:boxStrokeColor="@color/lineColor"
            app:boxStrokeWidth="1dp"
            app:endIconMode="dropdown_menu"
            app:endIconTint="@color/colorPrimaryDark"
            app:hintEnabled="false">

            <com.google.android.material.textview.MaterialAutoCompleteTextView
                android:id="@+id/autoMealType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_box_blue"
                android:drawableStart="@drawable/ic_event"
                android:drawablePadding="8dp"
                android:focusable="false"
                android:hint="@string/lbl_select_meal"
                android:inputType="textAutoComplete"
                android:maxLines="1"
                android:padding="8dp"
                android:textColorHint="@color/colorPrimaryDark" />

        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/action_next"
        app:backgroundTint="@color/colorPrimaryDark"
        app:cornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>